--- a/page.html
+++ b/page.html
@@ -40,3 +40,4 @@
         <button id="yesBtn">Yes</button>
         <button id="noBtn">No</button>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
